gcc/testsuite/rust/rustc/ui/error-codes/E0614.rs
fn main() {
    let y = 0u32;
    *y; // { dg-error ".E0614." "" { target *-*-* } }
}

